Fixed sidebar hub display
Now hubs that you create are also added to the sidebar, and sidebar height is based on content, so no more weird overlap from hub dropdown

--- a/client/src/css/hub-pages.css
+++ b/client/src/css/hub-pages.css
@@ -1,5 +1,5 @@
 .bucket {
-    height: 100%;
+    min-height: 100%;
     width: 90%;
     position: absolute;
     right: 0px;
